<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuMailInbox"
            android:title="@string/inboxKor"
            android:icon="@drawable/ic_double_arrow_right"/>
        <item
            android:id="@+id/menuMailSent"
            android:title="@string/sentKor"
            android:icon="@drawable/ic_double_arrow_right"/>
        <item
            android:id="@+id/menuMailSpam"
            android:title="@string/spamKor"
            android:icon="@drawable/ic_double_arrow_right"/>
        <item
            android:id="@+id/menuNote"
            android:title="@string/memoKor"
            android:icon="@drawable/ic_double_arrow_right"/>
    </group>
</menu>